// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: InternalEvents/loading 1`] = `
.c0 {
  padding: 10px 15px;
}

<InternalEvents
  data={
    Object {
      "events": null,
      "loading": true,
    }
  }
>
  <NavigationBar
    appName="IPPO"
  >
    <Blueprint3.Navbar>
      <div
        className="bp3-navbar"
      >
        <Blueprint3.NavbarGroup
          align="left"
        >
          <div
            className="bp3-navbar-group bp3-align-left"
          >
            <Blueprint3.NavbarHeading>
              <div
                className="bp3-navbar-heading"
              >
                IPPO
              </div>
            </Blueprint3.NavbarHeading>
          </div>
        </Blueprint3.NavbarGroup>
      </div>
    </Blueprint3.Navbar>
  </NavigationBar>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  padding: 10px 15px;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Blueprint3.Spinner>
          <div
            className="bp3-spinner"
          >
            <div
              className="bp3-spinner-animation"
            >
              <svg
                height={50}
                strokeWidth="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width={50}
              >
                <path
                  className="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  className="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength={280}
                  strokeDasharray="280 280"
                  strokeDashoffset={210}
                />
              </svg>
            </div>
          </div>
        </Blueprint3.Spinner>
      </div>
    </StyledComponent>
  </styled.div>
</InternalEvents>
`;

exports[`should match snapshot: InternalEvents/nocontents 1`] = `
.c0 {
  padding: 10px 15px;
}

<InternalEvents
  data={
    Object {
      "events": null,
      "loading": false,
    }
  }
>
  <NavigationBar
    appName="IPPO"
  >
    <Blueprint3.Navbar>
      <div
        className="bp3-navbar"
      >
        <Blueprint3.NavbarGroup
          align="left"
        >
          <div
            className="bp3-navbar-group bp3-align-left"
          >
            <Blueprint3.NavbarHeading>
              <div
                className="bp3-navbar-heading"
              >
                IPPO
              </div>
            </Blueprint3.NavbarHeading>
          </div>
        </Blueprint3.NavbarGroup>
      </div>
    </Blueprint3.Navbar>
  </NavigationBar>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  padding: 10px 15px;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Blueprint3.Text>
          <div
            className=""
          >
            No Contents
          </div>
        </Blueprint3.Text>
      </div>
    </StyledComponent>
  </styled.div>
</InternalEvents>
`;

exports[`should match snapshot: InternalEvents/nomal 1`] = `
.c0 {
  padding: 10px 15px;
}

<InternalEvents
  data={
    Object {
      "events": Object {
        "events": Array [
          Object {
            "catchMessage": "イベントの説明です",
            "id": 0,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル0",
          },
          Object {
            "catchMessage": "イベントの説明です",
            "id": 1,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル1",
          },
          Object {
            "catchMessage": "イベントの説明です",
            "id": 2,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル2",
          },
          Object {
            "catchMessage": "イベントの説明です",
            "id": 3,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル3",
          },
          Object {
            "catchMessage": "イベントの説明です",
            "id": 4,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル4",
          },
          Object {
            "catchMessage": "イベントの説明です",
            "id": 5,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル5",
          },
          Object {
            "catchMessage": "イベントの説明です",
            "id": 6,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル6",
          },
          Object {
            "catchMessage": "イベントの説明です",
            "id": 7,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル7",
          },
          Object {
            "catchMessage": "イベントの説明です",
            "id": 8,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル8",
          },
          Object {
            "catchMessage": "イベントの説明です",
            "id": 9,
            "place": "東京都千代田区丸の内",
            "startedAt": "2018/12/1 10:30",
            "title": "イベントのタイトル9",
          },
        ],
      },
      "loading": false,
    }
  }
>
  <NavigationBar
    appName="IPPO"
  >
    <Blueprint3.Navbar>
      <div
        className="bp3-navbar"
      >
        <Blueprint3.NavbarGroup
          align="left"
        >
          <div
            className="bp3-navbar-group bp3-align-left"
          >
            <Blueprint3.NavbarHeading>
              <div
                className="bp3-navbar-heading"
              >
                IPPO
              </div>
            </Blueprint3.NavbarHeading>
          </div>
        </Blueprint3.NavbarGroup>
      </div>
    </Blueprint3.Navbar>
  </NavigationBar>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  padding: 10px 15px;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Blueprint3.Text>
          <div
            className=""
          >
            No Contents
          </div>
        </Blueprint3.Text>
      </div>
    </StyledComponent>
  </styled.div>
</InternalEvents>
`;
